--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,4 +29,4 @@ jobs:
         uses: ncipollo/release-action@v1
         with:
           artifacts: "dist/app/*"
-          token: ${{ DEPLOY_ANGULAR_APP }}
+          token: ${{ secrets.TOKEN }}
