--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "build:ci": "ng build --prod --sourceMap=false --base-href /PersonalRepo/",
+    "build:ci": "ng build --base-href /PersonalRepo/",
     "test:ci": "ng test --watch=false --code-coverage --source-map true"
   },
   "private": true,
