--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "build:ci": "ng build --base-href /PersonalRepo/",
-    "test:ci": "ng test --watch=false --code-coverage --source-map true"
+    "build:ci": "ng build --base-href /PersonalRepo/"
   },
   "private": true,
   "dependencies": {
