--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,18 +20,7 @@ jobs:
         run: npm ci
       - name: Build
         run: npm run build:ci
-      - name: Archive build
-        if: success()
-        uses: actions/upload-artifact@v1
-        with:
-          name: deploy_dist
-          path: dist
-      - name: Archive code coverage result
-        if: success()
-        uses: actions/upload-artifact@v1
-        with:
-          name: deploy_coverage
-          path: coverage
+     
   deploy:
     runs-on: ubuntu-latest
     needs: build
@@ -47,4 +36,4 @@ jobs:
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           BRANCH: gh-pages
-          FOLDER: deploy_dist/angular-demo
+          FOLDER: dist/app
