--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,20 +20,24 @@ jobs:
         run: npm ci
       - name: Build
         run: npm run build:ci
-     
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v1
-      - name: Download build
-        uses: actions/download-artifact@v1
+     - name: Push Build to Releases
+        uses: ncipollo/release-action@v1
         with:
-          name: dist
-      - name: Deploy to GitHub Pages
-        uses: JamesIves/github-pages-deploy-action@releases/v3
-        with:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          BRANCH: gh-pages
-          FOLDER: dist/app
+          artifacts: "dist/app/*"
+          token: ${{ secrets.TOKEN }}
+  # deploy:
+  #   runs-on: ubuntu-latest
+  #   needs: build
+  #   steps:
+  #     - name: Checkout
+  #       uses: actions/checkout@v1
+  #     - name: Download build
+  #       uses: actions/download-artifact@v1
+  #       with:
+  #         name: dist
+  #     - name: Deploy to GitHub Pages
+  #       uses: JamesIves/github-pages-deploy-action@releases/v3
+  #       with:
+  #         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  #         BRANCH: gh-pages
+  #         FOLDER: dist/app
