--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,43 +1,32 @@
-name: workflow name
-
-on:
-  push:
-    branches:
-      - 'master'
-
+n: push
+name: Build Angular
 jobs:
   build:
-    name: Build and Test
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [18.12.1]
+
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-      - name: Use Node 
+      - uses: actions/checkout@v1
+
+      - name: Cache node modules
+        uses: actions/cache@v1
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
+      - name: Node ${{ matrix.node-version }}
         uses: actions/setup-node@v1
         with:
-          node-version: '18.12.1'
-      - name: Install dependencies
-        run: npm ci
-      - name: Build
-        run: npm run build:ci
+          node-version: ${{ matrix.node-version }}
+      - name: npm install and npm run build
+        run: |
+          npm i
+          npm run build:prod
       - name: Push Build to Releases
         uses: ncipollo/release-action@v1
         with:
           artifacts: "dist/app/*"
           token: ${{ secrets.TOKEN }}
-  # deploy:
-  #   runs-on: ubuntu-latest
-  #   needs: build
-  #   steps:
-  #     - name: Checkout
-  #       uses: actions/checkout@v1
-  #     - name: Download build
-  #       uses: actions/download-artifact@v1
-  #       with:
-  #         name: dist
-  #     - name: Deploy to GitHub Pages
-  #       uses: JamesIves/github-pages-deploy-action@releases/v3
-  #       with:
-  #         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  #         BRANCH: gh-pages
-  #         FOLDER: dist/app
