--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,8 @@
-on: push
-  tags:
-    - '*'
+on:
+  push:
+    tags:
+      - '*'
 name: Build Angular
-
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -33,3 +33,4 @@ jobs:
         with:
           artifacts: "dist/app/*"
           token: ${{ secrets.GITHUB_TOKEN }}
+          
