--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,4 +38,5 @@ jobs:
         with:
           artifacts: "dist/app/*"
           token: ${{ secrets.GITHUB_TOKEN }}
+          tag: "latest"
           
